--- a/frontend/index.html
+++ b/frontend/index.html
@@ -603,7 +603,7 @@
   </div>
 
   <footer class="footer">
-    <p>© 2023 NutriMind. All rights reserved.</p>
+    <p>© 2025 Sourav Roy. All rights reserved.</p>
   </footer>
 
   <script>
